--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,8 @@ logging.level.org.springframework.jdbc.core=DEBUG
 #spring.datasource.username=spring@$AZ_DATABASE_NAME
 #spring.datasource.password=$AZ_SQL_SERVER_PASSWORD
 
+#spring.datasource.url=jdbc:sqlserver://spring-data-jdbc-test.database.windows.net:1433;databaseName=demo;authentication=DefaultAzureCredential;
+spring.datasource.url=jdbc:sqlserver://spring-data-jdbc-test.database.windows.net:1433;databaseName=demo;authentication=ActiveDirectoryDefault;
+spring.datasource.username=HCI-AZ-ADM-Halabala@embedit.cz@spring-data-jdbc-test
+
 spring.datasource.initialization-mode=always
